ansible works for suse but not both

--- a/ansible/install-databases.yml
+++ b/ansible/install-databases.yml
@@ -1,5 +1,5 @@
 - name: Install MongoDB Database
-  hosts: [amd64_rhel_8_appdb, amd64_rhel_8_oplog, amd64_rhel_8_blockstore]
+  hosts: [amd64_rhel_8_appdb, amd64_suse_15_appdb, amd64_rhel_8_oplog, amd64_rhel_8_blockstore]
   gather_facts: yes
   roles:
     - databases
