--- a/ansible/modify-om.yml
+++ b/ansible/modify-om.yml
@@ -1,5 +1,5 @@
 - name: Install MongoDB Database
-  hosts: [x86_centos7_opsman]
+  hosts: [x86_backing_opsman]
   gather_facts: yes
   roles:
     - ops-mod
