--- a/ansible/roles/databases/tasks/suse.yml
+++ b/ansible/roles/databases/tasks/suse.yml
@@ -54,7 +54,7 @@
     regexp: '#replication:'
     line: 'replication:'
   vars:
-    HOST_COUNT: "{{ groups['amd64_suse_15_appdb'] | length }}"
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
   when: "HOST_COUNT | int >= 3"
 
 - name: mongod.conf enable replication 2
@@ -65,7 +65,7 @@
     line: '  replSetName: "AppDB"'
     insertafter: 'replication:'
   vars:
-    HOST_COUNT: "{{ groups['amd64_suse_15_appdb'] | length }}"
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
   when: "HOST_COUNT | int >= 3"
 
 - name: SUSE, Enable mongod service
@@ -83,16 +83,16 @@
 - name: mongod.conf enable replication 3
   ansible.builtin.command: "mongo --eval 'rs.initiate()'"
   run_once: true
-  delegate_to: "{{ groups['amd64_suse_15_appdb'].0 }}"
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
   vars:
-    HOST_COUNT: "{{ groups['amd64_suse_15_appdb'] | length }}"
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
   when: "HOST_COUNT | int >= 3"
   
 - name: mongod.conf enable replication 4
   command: mongo --eval 'rs.add("{{ item }}:27017")'
-  delegate_to: "{{ groups['amd64_suse_15_appdb'].0 }}"
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
   run_once: true
   vars:
-    HOST_COUNT: "{{ groups['amd64_suse_15_appdb'] | length }}"
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
   when: "HOST_COUNT | int >= 3"
-  loop: "{{ amd64_suse_15_appdb }}"
+  loop: "{{ amd64_backing_appdb }}"
