enable services to build on rhel8

--- a/ansible/install-extras.yml
+++ b/ansible/install-extras.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install extras
-  hosts: [arm_centos8s_extras]
+  hosts: [aarch64_backing_services]
   gather_facts: yes
   roles:
     - extras
