--- a/ansible/roles/databases/tasks/ubuntu.yml
+++ b/ansible/roles/databases/tasks/ubuntu.yml
@@ -1,5 +1,5 @@
 - name: Debian/Ubuntu, install MongoDB Enterprise dependencies via apt
-  become: yes
+  become: true
   become_user: root
   apt:
     name: "{{ packages }}"
@@ -19,61 +19,43 @@
         - gnupg
 
 - name: Debian/Ubuntu, add apt-key
-  become: yes
+  become: true
   become_user: root
   apt_key:
-    url: https://www.mongodb.org/static/pgp/server-4.0.asc
+    url: https://www.mongodb.org/static/pgp/server-6.0.asc
     state: present
-  when: version == "db_4_0_latest"
+  when: version == "db_6_0_latest"
 
 - name: Debian/Ubuntu, add apt repository
-  become: yes
+  become: true
   become_user: root
   apt_repository:
-    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu bionic/mongodb-enterprise/4.0 multiverse"
+    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/6.0 multiverse"
     state: present
     filename: mongodb-enerprise
     update_cache: yes
-  when: version == "db_4_0_latest"
+  when: version == "db_6_0_latest"
 
 - name: Debian/Ubuntu, add apt-key
-  become: yes
+  become: true
   become_user: root
   apt_key:
-    url: https://www.mongodb.org/static/pgp/server-4.2.asc
+    url: https://www.mongodb.org/static/pgp/server-7.0.asc
     state: present
-  when: version == "db_4_2_latest"
+  when: version == "db_7_0_latest"
 
 - name: Debian/Ubuntu, add apt repository
-  become: yes
+  become: true
   become_user: root
   apt_repository:
-    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu bionic/mongodb-enterprise/4.2 multiverse"
+    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/7.0 multiverse"
     state: present
     filename: mongodb-enerprise
     update_cache: yes
-  when: version == "db_4_2_latest"
-
-- name: Debian/Ubuntu, add apt-key
-  become: yes
-  become_user: root
-  apt_key:
-    url: https://www.mongodb.org/static/pgp/server-4.4.asc
-    state: present
-  when: version == "db_4_4_latest"
-
-- name: Debian/Ubuntu, add apt repository
-  become: yes
-  become_user: root
-  apt_repository:
-    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu bionic/mongodb-enterprise/4.4 multiverse"
-    state: present
-    filename: mongodb-enerprise
-    update_cache: yes
-  when: version == "db_4_4_latest"
+  when: version == "db_7_0_latest"
 
 - name: Debian/Ubuntu, install mongodb-enterprise
-  become: yes
+  become: true
   become_user: root
   apt:
     name: "{{ packages }}"
@@ -83,14 +65,61 @@
     packages:
         - mongodb-enterprise
 
+- name: mongod.conf bind to 0.0.0.0
+  become: true
+  become_user: root
+  lineinfile:
+    path: /etc/mongod.conf
+    regexp: '^  bindIp: '
+    line: '  bindIp: 0.0.0.0'
+
+- name: mongod.conf enable replication 1
+  become: true
+  become_user: root
+  lineinfile:
+    path: /etc/mongod.conf
+    regexp: '#replication:'
+    line: 'replication:'
+  vars:
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
+  when: "HOST_COUNT | int >= 3"
+
+- name: mongod.conf enable replication 2
+  become: true
+  become_user: root
+  lineinfile:
+    path: /etc/mongod.conf
+    line: '  replSetName: "amd64_backing_appdb"'
+    insertafter: 'replication:'
+  vars:
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
+  when: "HOST_COUNT | int >= 3"
+
 - name: Debian/Ubuntu, enable mongod service
-  become: yes
+  become: true
   become_user: root
   service:
     name: mongod
     enabled: yes
 
 - name: Debian/Ubuntu, start mongod
-  become: yes
+  become: true
   become_user: root
   service: name=mongod state=started
+
+- name: mongod.conf enable replication 3
+  ansible.builtin.command: "mongo --eval 'rs.initiate()'"
+  run_once: true
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
+  vars:
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
+  when: "HOST_COUNT | int >= 3"
+  
+- name: mongod.conf enable replication 4
+  command: mongo --eval 'rs.add("{{ item }}:27017")'
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
+  run_once: true
+  vars:
+    HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
+  when: "HOST_COUNT | int >= 3"
+  loop: "{{ amd64_backing_appdb }}"
