--- a/ansible/roles/ops/tasks/ubuntu.yml
+++ b/ansible/roles/ops/tasks/ubuntu.yml
@@ -5,8 +5,40 @@
 - name: Download .deb
   vars:
     urls:
+      om_6_0_0: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.0.100.20220711T2119Z.amd64.deb
+      om_6_0_1: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.1.100.20220720T1207Z.amd64.deb
+      om_6_0_2: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.2.100.20220802T0955Z.amd64.deb
+      om_6_0_3: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.3.100.20220830T1645Z.amd64.deb
+      om_6_0_4: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.4.100.20221007T1747Z.amd64.deb
+      om_6_0_5: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.5.100.20221019T1057Z.amd64.deb
+      om_6_0_6: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.6.100.20221102T1837Z.amd64.deb
+      om_6_0_7: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.7.100.20221129T1444Z.amd64.deb
+      om_6_0_8: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.8.100.20230111T1647Z.amd64.deb
+      om_6_0_9: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.9.100.20230201T2148Z.amd64.deb
+      om_6_0_10: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.10.100.20230228T0343Z.amd64.deb
+      om_6_0_11: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.11.100.20230310T0141Z.amd64.deb
+      om_6_0_12: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.12.100.20230406T1856Z.amd64.deb
+      om_6_0_13: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.13.100.20230502T1610Z.amd64.deb
+      om_6_0_14: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.14.100.20230530T1837Z.amd64.deb
+      om_6_0_15: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.15.100.20230614T1851Z.amd64.deb
+      om_6_0_16: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.16.100.20230705T1544Z.amd64.deb
+      om_6_0_17: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.17.100.20230801T1349Z.amd64.deb
+      om_6_0_18: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.18.100.20230905T1424Z.amd64.deb
+      om_6_0_19: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.19.100.20231002T1347Z.amd64.deb
+      om_6_0_20: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.20.100.20231102T2125Z.amd64.deb
+      om_6_0_21: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.21.100.20231213T1202Z.amd64.deb
+      om_6_0_22: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.22.100.20231229T1643Z.amd64.deb
       om_6_0_23: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.23.100.20240402T1833Z.amd64.deb
-      om_6_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.23.100.20240402T1833Z.amd64.deb
+      om_6_0_24: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.24.100.20240712T1254Z.amd64.deb
+      om_6_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.24.100.20240712T1254Z.amd64.deb
+      om_7_0_0: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.0.500.20231218T1951Z.amd64.deb
+      om_7_0_1: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.1.500.20240105T0224Z.amd64.deb
+      om_7_0_2: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.2.500.20240130T2116Z.amd64.deb
+      om_7_0_3: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.3.500.20240305T1916Z.amd64.deb
+      om_7_0_4: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.4.500.20240405T1424Z.amd64.deb
+      # removed from downloads  
+      om_7_0_6: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.6.500.20240509T1421Z.amd64.deb
+      om_7_0_7: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.7.500.20240605T1843Z.amd64.deb
       om_7_0_8: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.8.500.20240627T1700Z.amd64.deb
       om_7_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.8.500.20240627T1700Z.amd64.deb
     om_download_url: "{{ urls[version] }}"
