--- a/ansible/install-om.yml
+++ b/ansible/install-om.yml
@@ -1,6 +1,17 @@
-- name: Install MongoDB Database
+- name: Set os_release
+  hosts: [amd64_backing_opsman]
+  gather_facts: no
+  tasks:
+    - name: Read OS Release Info
+      raw: cat /etc/os-release
+      register: os_release
+      changed_when: false
+
+- name: Install Ops Manager
   hosts: [amd64_backing_opsman]
   gather_facts: yes
+  vars:
+    ansible_python_interpreter: >-
+      {{ '/usr/bin/python3.11' if 'SUSE' in hostvars[inventory_hostname]['os_release'].stdout or 'sles' in hostvars[inventory_hostname]['os_release'].stdout else '/usr/bin/python3.9' }}
   roles:
     - ops
-  
