--- a/ansible/modify-om.yml
+++ b/ansible/modify-om.yml
@@ -1,6 +1,18 @@
+- name: Set os_release
+  hosts: [x86_backing_opsman]
+  gather_facts: no
+  tasks:
+    - name: Read OS Release Info
+      raw: cat /etc/os-release
+      register: os_release
+      changed_when: false
+
 - name: Install MongoDB Database
   hosts: [x86_backing_opsman]
   gather_facts: yes
+  vars:
+    ansible_python_interpreter: >-
+      {{ '/usr/bin/python3.11' if 'SUSE' in hostvars[inventory_hostname]['os_release'].stdout or 'sles' in hostvars[inventory_hostname]['os_release'].stdout else '/usr/bin/python3.9' }}
   roles:
     - ops-mod
   
