--- a/ansible/roles/databases/tasks/ubuntu.yml
+++ b/ansible/roles/databases/tasks/ubuntu.yml
@@ -54,6 +54,25 @@
     update_cache: yes
   when: version == "db_7_0_latest"
 
+- name: Debian/Ubuntu, add apt-key
+  become: true
+  become_user: root
+  apt_key:
+    url: https://www.mongodb.org/static/pgp/server-8.0.asc
+    state: present
+  when: version == "db_8_0_latest"
+
+- name: Debian/Ubuntu, add apt repository
+  become: true
+  become_user: root
+  apt_repository:
+    repo: "deb [ arch=amd64,arm64,s390x ] http://repo.mongodb.com/apt/ubuntu focal/mongodb-enterprise/8.0 multiverse"
+    state: present
+    filename: mongodb-enerprise
+    update_cache: yes
+  when: version == "db_8_0_latest"
+  
+
 - name: Debian/Ubuntu, install mongodb-enterprise
   become: true
   become_user: root
@@ -107,19 +126,38 @@
   become_user: root
   service: name=mongod state=started
 
-- name: mongod.conf enable replication 3
-  ansible.builtin.command: "mongo --eval 'rs.initiate()'"
+# mongo is replaced by mongosh since 5.0 versions
+- name: Detect Mongo shell (mongo or mongosh)
+  ansible.builtin.command: "bash -c 'command -v mongosh || command -v mongo'"
+  register: mongo_shell_path
+  changed_when: false
+  ignore_errors: true
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
+  run_once: true
+
+- name: Initiate Replica Set
+  ansible.builtin.command: "{{ mongo_shell_path.stdout }} --eval 'rs.initiate()'"
   run_once: true
   delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
   vars:
     HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
-  when: "HOST_COUNT | int >= 3"
-  
-- name: mongod.conf enable replication 4
-  command: mongo --eval 'rs.add("{{ item }}:27017")'
+  when: "HOST_COUNT | int >= 3 and mongo_shell_path.stdout != ''"
+
+- name: Wait for MongoDB Primary Election
+  ansible.builtin.command: "{{ mongo_shell_path.stdout }} --eval 'while (!rs.status().myState || rs.status().myState !== 1) { sleep(1) }'"
   delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
   run_once: true
+  changed_when: false
+
+- name: Add Secondary Nodes to Replica Set
+  ansible.builtin.command: "{{ mongo_shell_path.stdout }} --eval 'rs.add(\"{{ item }}:27017\")'"
+  delegate_to: "{{ groups['amd64_backing_appdb'].0 }}"
+  run_once: true
+  register: rs_add_result
+  until: rs_add_result.rc == 0
+  retries: 5
+  delay: 2
   vars:
     HOST_COUNT: "{{ groups['amd64_backing_appdb'] | length }}"
-  when: "HOST_COUNT | int >= 3"
-  loop: "{{ amd64_backing_appdb }}"
+  when: "HOST_COUNT | int >= 3 and mongo_shell_path.stdout != ''"
+  loop: "{{ groups['amd64_backing_appdb'] | difference([groups['amd64_backing_appdb'].0]) }}"
