--- a/ansible/roles/extras/tasks/centos.yml
+++ b/ansible/roles/extras/tasks/centos.yml
@@ -2,12 +2,17 @@
   include_vars:
     file: vars/om-vars.yaml
 
-- name: Disable SELinux
+- name: Disable SELinux Enforcement
   become: true
-  become_user: root
-  ansible.posix.selinux:
-    policy: targeted
-    state: permissive
+  command: setenforce 0
+  changed_when: false
+
+- name: Permanently Disable SELinux (survives after a reboot)
+  become: true
+  replace:
+    path: /etc/selinux/config
+    regexp: '^SELINUX=enforcing'
+    replace: 'SELINUX=permissive'
 
 - name: Set hostname to internal ec2 address
   become: true
@@ -72,6 +77,10 @@
 #         - ipa-server-dns         ## DNS addon
 #         - nginx                  ## Load-balancer
 #         - vim
+
+- name: Install nginx
+  command: yum install -y nginx
+  become: yes
 
 - name: CentOS, stop nginx
   become: true
