--- a/ansible/roles/ops/tasks/ubuntu.yml
+++ b/ansible/roles/ops/tasks/ubuntu.yml
@@ -30,7 +30,9 @@
       om_6_0_22: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.22.100.20231229T1643Z.amd64.deb
       om_6_0_23: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.23.100.20240402T1833Z.amd64.deb
       om_6_0_24: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.24.100.20240712T1254Z.amd64.deb
-      om_6_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.24.100.20240712T1254Z.amd64.deb
+      om_6_0_25: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.25.100.20240807T1537Z.amd64.deb
+      om_6_0_26: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.26.100.20241029T1712Z.amd64.deb
+      om_6_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-6.0.26.100.20241029T1712Z.amd64.deb
       om_7_0_0: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.0.500.20231218T1951Z.amd64.deb
       om_7_0_1: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.1.500.20240105T0224Z.amd64.deb
       om_7_0_2: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.2.500.20240130T2116Z.amd64.deb
@@ -42,7 +44,16 @@
       om_7_0_8: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.8.500.20240627T1700Z.amd64.deb
       om_7_0_9: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.9.500.20240716T1711Z.amd64.deb
       om_7_0_10: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.10.500.20240731T2147Z.amd64.deb
-      om_7_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.10.500.20240731T2147Z.amd64.deb
+      om_7_0_11: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.11.500.20240830T1726Z.amd64.deb
+      om_7_0_12: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.12.500.20241029T1928Z.amd64.deb
+      om_7_0_13: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.13.500.20250109T1452Z.amd64.deb
+      om_7_0_14: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.14.500.20250121T1019Z.amd64.deb
+      om_7_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-7.0.14.500.20250121T1019Z.amd64.deb
+      om_8_0_0: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-8.0.0.500.20240924T1615Z.amd64.deb
+      om_8_0_1: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-8.0.1.500.20241030T1533Z.amd64.deb
+      om_8_0_2: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-8.0.2.500.20241205T1549Z.amd64.deb
+      om_8_0_3: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-8.0.3.500.20250109T2333Z.amd64.deb
+      om_8_0_latest: https://downloads.mongodb.com/on-prem-mms/deb/mongodb-mms-8.0.3.500.20250109T2333Z.amd64.deb
     om_download_url: "{{ urls[version] }}"
   get_url:
     url: "{{ om_download_url }}"
@@ -94,7 +105,7 @@
     marker: "# Instance Parameter Overrides"
   loop:
     - { setting: mms.ignoreInitialUiSetup, value: "true" }
-    - { setting: mms.centralUrl, value: "{{om_url.0}}" }
+    - { setting: mms.centralUrl, value: "{{ services_url.0 | default(om_url.0) }}" }
     # - { setting: automation.versions.source, value: mongodb }
     - { setting: mms.adminEmailAddr, value: no-reply@opsmanager.local }
     - { setting: mms.fromEmailAddr, value: no-reply@opsmanager.local }
